# uiuc-lar

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt
RMLE/: .cproject  .project  CMakeLists.txt  Gaussian.cc  HMM.cc  HMM.hh  IndepPMF.cc  IndepPMF.hh  StochasticClassifier.cc  hmmRMLE.cpp
boh11demo/: .project  A.csv  CMakeLists.txt  MU.csv  Makefile  action-gen.xml  action-gensim.xml  actionclass.ini  armFwdKin  associativeMemory  associativeMemory.cpp  audio-demo.xml  audio-demo.xml~  audio.xml  audioProcessing.cpp  bohdemo-genj.xml  bohdemo-j.xml  bohdemo.xml  cmake_install.cmake  demoGate  demoGate.cpp  fwdConv  lexiconLearner  lexiconLearner.cpp  loadactions.sh  loadactions.sh~  maDetect  memparams.ini  phoneClassifier.cpp  phoneclassparams.ini  phoneticClassifier  randArmExplore  robotMicConditioning.cpp  robotMicFix  speechclass.ini  vaDetect
boh11demo/.svn/: all-wcprops  entries
boh11demo/.svn/text-base/: CMakeLists.txt.svn-base  action-gen.xml.svn-base  demoGate.svn-base  phoneClassifier.cpp.svn-base
boh11demo/.svn/tmp/: CMakeLists.txt.2.tmp  CMakeLists.txt.tmp  lexiconLearner.cpp.tmp  phoneClassifier.cpp.2.tmp  phoneClassifier.cpp.tmp  tempfile.tmp
boh11demo/conf/: actionclass-gen.ini  actionclass-learn.ini  memparams-load.ini  memparams-loadj.ini  phoneclassparams.ini  phoneclassparams2.ini  speechclass-demo.ini
boh11demo/conf/.svn/: all-wcprops  entries
boh11demo/data/: A.csv  A.csv.bak  MU.csv  MU.csv.bak  U.csv  U.csv.bak
boh11demo/data/.svn/: all-wcprops  entries
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/.svn/: all-wcprops  entries
src/RMLE/: CMakeLists.txt  IndepPMF.cc  IndepPMF.hh  Makefile  N.hh  cmake_install.cmake  hmmRMLE  label_list.cc  label_list.hh
src/alphabetsong/: CMakeLists.txt  dummy_piano.cpp  ecard  ecard.cpp  ecard_original.cpp  ecard_segmented.cpp  head_bob.cpp  lazy_vocoder.py  ports.db  sing_piano.cpp  subs.db  synth_out.txt  test_file.txt  vocoder.py  wav2file.py  wwaaya.txt
src/balancing/: Makefile  cmake_install.cmake
src/ballplate/: CMakeLists.txt  ballplate  maze.cpp  maze.cpp.bkred  yarpbp1.sh
src/blobTracker3d/: CMakeCache.txt.bk  CMakeLists.txt  audioBlobTrack  blobTracker.xml  blobTracker2.xml  handTracker.xml  stereoBallLoc  stereoBallLoc.cpp  stereoBlobTrack  stereoBlobTrack.cpp  stereoBlobTrackAudio.cpp
src/boh11demo/: CMakeLists.txt  Makefile  armFwdKin  associativeMemory  audioProcessing.cpp  cmake_install.cmake  demoGate  lexiconLearner  maDetect  phoneClassifier.cpp  phoneticClassifier  vaDetect
src/graspDemo/: Makefile  cmake_install.cmake  stereoCalib  stereo_calib_new.cpp
src/imatlib/: CMakeLists.txt  IMatVecOps.cc  IMatVecOps.hh  IVec.hh  IVecInt.cc  Makefile  cmake_install.cmake  gen_defines.h
src/interactiondemo/: CMakeLists.txt  Makefile  cmake_install.cmake  objectMover  objectMover.cpp  objectMoverART  objectMoverART.cpp
src/lexicon/: CMakeLists.txt  Makefile  SequenceLearner.cpp  SequenceLearnerCont.cpp  SequenceLearnerCont.h  cmake_install.cmake
src/lukecontrol/: CMakeLists.txt  ballplate.xml  ikin.sh  lukecontrol  lukecontrolout.txt  maze.cpp  sysidentout.txt  yarpbp3.sh
src/maze/: CMakeLists.txt  MazeMatrix-v3.txt  MazeMatrix-v4.txt  MazeMatrix.txt  ikin.sh  maze.cpp
src/randExpDemo/: CMakeLists.txt  Makefile  cmake_install.cmake  fwdConv  randArmExplore  randArmExplore.cpp  randHead
src/robotools/: CMakeCache.txt  CMakeLists.txt  Makefile  actionPerformer.cpp  bottleLogger  bottleLogger.cpp  cmake_install.cmake  dataPumper  floatToRgb  floatToRgb.cpp  performAction  portToScreen  portToScreen.cpp
src/speech/: Makefile  cmake_install.cmake  mfcc.cpp
src/sysident/: CMakeLists.txt  bertEyes.ini  maze.cpp  sysident  sysident-2017-02-18-a.txt  sysident-loose-2017-02-19.txt  sysident-withblance-2017-02-18-b.txt  sysidentout.txt  yarpbp2.sh  yarpbp4.sh
src/vision/: CMakeLists.txt  Makefile  cmake_install.cmake
trunk/: CMakeLists.txt
trunk/RMLE/: .cproject  .project  CMakeLists.txt  Gaussian.cc  Gaussian.hh  HMM.cc  HMM.hh  IndepPMF.cc  hmmRMLE.cpp
trunk/boh11demo/: .project  CMakeCache.txt  CMakeLists.txt  MU.csv  U.csv  actionVad.cpp  actionclass.ini  armFwdKin  associativeMemory  audio.xml  audioProcessing.cpp  bohdemo.xml  cmake_install.cmake  demoGate  lexiconLearner  lexiconLearner.cpp  maDetect  phoneclassparams.ini  phoneclassparams2.ini  phoneticClassifier  vaDetect
trunk/imatlib/: .cproject  .project  IMat.cc  IVec.cc
trunk/lexicon/: .cproject  .project  SequenceLearner.cpp  SequenceLearner.h  SequenceLearnerCont.h  SequenceLearnerDisc.cpp  SequenceLearnerDisc.h
trunk/randExpDemo/: CMakeLists.txt  randArmExplore.cpp  randExpDemo.xml  randHeadMotion.cpp
trunk/robotools/: CMakeLists.txt  bottleLogger.cpp  portToScreen.cpp
trunk/semanticLearning/: .cproject  SequenceLearner.h  SequenceLearnerDisc.cpp  actionlist.ini  newactiontest.cpp  phonetic-old.cpp  rmleexample.cpp  soundlist.ini  soundlist2.ini  soundlist3.ini  word2.cpp
trunk/speech/: .cproject  .project  autocorr.c  filter.c  lpc.h  mfcc.h  pitchdet.c  pitchdet.h  simplevad.h  spechgen.h  synthftr.c  synthftr.h
trunk/visMotor/: .project  CMakeLists.txt  SOM.cpp  SOM.h  babbleFine.cpp  handOptFlow.cpp
trunk/vision/: CMakeLists.txt  gazeEstimator.cpp  gazeEval.cpp  gazeLearner.cpp  skinfilt.cpp
trunk/voiceStream/: main.cpp
visMotor/: .cproject  CMakeLists.txt  SOM.cpp  SOM.h  babbleFine.cpp  dummyTrack.cpp  fineMotorLearn.xml  randArmExplore.cpp  visMotorMapModule.cpp
visMotor/babbleDemo/: babbleDemo.xml
visMotor/fineMotor/: CMakeLists.txt  babbleFine.cpp  babbleFine2.cpp  babbleFineCart.cpp  handOptFlow.cpp  testMap.cpp
visMotor/grossMotor/: CMakeLists.txt
visMotor/motorTools/: SOM.cpp
visMotor/obsolete/: learnedReach.cpp
vision/blobTracker3d/: CMakeLists.txt  stereoBallLoc.cpp  stereoBlobTrack.cpp
vision/jointAttention/: CMakeLists.txt  RBFMap.cpp  RBFMap.h  gazeEstimator.cpp  gazeEval.cpp  objectFeatures.cpp  objectSegmentation.cpp  objectShaker.cpp  randObjSeg.cpp  topDownObjectMap.cpp
(+448 files in other folders)
