CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

MAKE_DIRECTORY(bin)
MAKE_DIRECTORY(lib)

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

#SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_BUILD_TYPE "Release")

ADD_DEFINITIONS(-DUSE_DOUBLE)
SET(CMAKE_C_FLAGS "-w")

## note: new added, since it deprecated since 2.6
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

ADD_SUBDIRECTORY(src)
