PROJECT(MOTOR_IMIT)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} .)
LINK_DIRECTORIES(/usr/local/lib)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

ADD_SUBDIRECTORY(motorTools)
#ADD_SUBDIRECTORY(babbleDemo)
#ADD_SUBDIRECTORY(grossMotor)
ADD_SUBDIRECTORY(fineMotor)

