CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT(RMLE)

FIND_PACKAGE(YARP)

set(CMAKE_MODULE_PATH ${YARP_MODULE_PATH} ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Atlas)

INCLUDE_DIRECTORIES("./" ${YARP_INCLUDE_DIRS})
LINK_DIRECTORIES(/usr/lib ${ATLAS_LIBRARIES})

# add required linker flags
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")              
SET(CMAKE_CXX_FLAGS_DEBUG "-g")


file(GLOB RMLEFILES "*.cc")

ADD_LIBRARY(RMLE ${RMLEFILES})
ADD_EXECUTABLE(hmmRMLE  hmmRMLE.cpp)

TARGET_LINK_LIBRARIES(hmmRMLE  ${YARP_LIBRARIES} RMLE imatlib torch blas lapack lapack_atlas gsl)

install(TARGETS RMLE DESTINATION lib)
install(TARGETS hmmRMLE DESTINATION bin)
