SET(PROJECTNAME interactionDemo)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_DIR}/conf ${ICUB_DIR}/conf)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})

# add required linker flags
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")              
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

ADD_EXECUTABLE(objectMover  objectMover.cpp)
ADD_EXECUTABLE(objectMoverART  objectMoverART.cpp)

TARGET_LINK_LIBRARIES(objectMover ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)
TARGET_LINK_LIBRARIES(objectMoverART ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)

INSTALL(TARGETS objectMover DESTINATION bin)
INSTALL(TARGETS objectMoverART DESTINATION bin)
