PROJECT(MOTOR_IMIT)

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} .)
LINK_DIRECTORIES(/usr/local/lib)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

ADD_EXECUTABLE(randArmExplore randArmExplore.cpp)
ADD_EXECUTABLE(fwdConv fwdConverter.cpp)
ADD_EXECUTABLE(randHead randHeadMotion.cpp)

TARGET_LINK_LIBRARIES(randArmExplore ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(fwdConv ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(randHead ${YARP_LIBRARIES} ${ICUB_LIBRARIES})

INSTALL(TARGETS randArmExplore fwdConv randHead DESTINATION bin)
