PROJECT(MOTOR_IMIT)

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} .)
LINK_DIRECTORIES(/usr/local/lib /home/lydia/Research/eclipse_ws/motorImitation)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

ADD_EXECUTABLE(dispmap DispMap.cpp)
ADD_EXECUTABLE(randArmExplore randArmExplore.cpp)
ADD_EXECUTABLE(fwdConv fwdConverter.cpp)
ADD_EXECUTABLE(randHead randHeadMotion.cpp)
ADD_EXECUTABLE(vis1 vis1.cpp)

TARGET_LINK_LIBRARIES(dispmap ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(randArmExplore ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(fwdConv ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(randHead ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(vis1 ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
