PROJECT(MOTOR_IMIT)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} .)
LINK_DIRECTORIES(/usr/local/lib /home/lydia/Research/eclipse_ws/motorImitation)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

#ADD_LIBRARY(som SOM.cpp)

ADD_EXECUTABLE(randArmExplore randArmExplore.cpp)
ADD_EXECUTABLE(visMotor visMotorMapModule.cpp)
ADD_EXECUTABLE(dummyTrack dummyTrack.cpp)
ADD_EXECUTABLE(babbleTrack babbleTrackModule.cpp)

TARGET_LINK_LIBRARIES(randArmExplore ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(visMotor ${YARP_LIBRARIES} ${ICUB_LIBRARIES} som)
TARGET_LINK_LIBRARIES(dummyTrack ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)
TARGET_LINK_LIBRARIES(babbleTrack ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)

INSTALL(TARGETS randArmExplore visMotor dummyTrack babbleTrack DESTINATION bin)
