SET(PROJECTNAME stereoAttention)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_DIR}/conf ${ICUB_DIR}/conf)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})

# add required linker flags
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")              
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

ADD_EXECUTABLE(egoRemapper  egoRemapper.cpp)
ADD_EXECUTABLE(stereoAttention  stereoAttentionSystem.cpp)
ADD_EXECUTABLE(stereoIOR  stereoIOR.cpp)
ADD_EXECUTABLE(depthMap depthMap.cpp)

TARGET_LINK_LIBRARIES(egoRemapper ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(stereoAttention ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)
TARGET_LINK_LIBRARIES(stereoIOR ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(depthMap ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} ${ICUB_LIBRARIES})


INSTALL(TARGETS egoRemapper stereoAttention stereoIOR depthMap DESTINATION bin)
