PROJECT(MOTOR_IMIT)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} .)
LINK_DIRECTORIES(/usr/local/lib /home/lydia/Research/eclipse_ws/motorImitation)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

#FIND_PACKAGE(OpenCV REQUIRED)

ADD_LIBRARY(som SOM.cpp)

#ADD_EXECUTABLE(randArmExplore randArmExplore.cpp)
ADD_EXECUTABLE(fwdConv fwdConverter.cpp)
#ADD_EXECUTABLE(visMotor visMotorMapModule.cpp)
#ADD_EXECUTABLE(dummyTrack dummyTrack.cpp)
#ADD_EXECUTABLE(learnedReach learnedReach.cpp)
ADD_EXECUTABLE(testReach testReach.cpp)
#ADD_EXECUTABLE(babbleTrack babbleTrackModule.cpp)
#ADD_EXECUTABLE(stereoBlobTrackEtc stereoBlobTrackEtc.cpp)
ADD_EXECUTABLE(learnedReachLook learnedReachLook.cpp)

#TARGET_LINK_LIBRARIES(randArmExplore ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
TARGET_LINK_LIBRARIES(fwdConv ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
#TARGET_LINK_LIBRARIES(visMotor ${YARP_LIBRARIES} ${ICUB_LIBRARIES} som)
#TARGET_LINK_LIBRARIES(dummyTrack ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)
#TARGET_LINK_LIBRARIES(learnedReach ${YARP_LIBRARIES} ${ICUB_LIBRARIES} som)
TARGET_LINK_LIBRARIES(testReach ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
#TARGET_LINK_LIBRARIES(babbleTrack ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)
#TARGET_LINK_LIBRARIES(stereoBlobTrackEtc ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod)
TARGET_LINK_LIBRARIES(learnedReachLook ${YARP_LIBRARIES} ${ICUB_LIBRARIES} icubmod som)

INSTALL(TARGETS fwdConv testReach learnedReachLook DESTINATION bin)
