SET(PROJECTNAME fineMotor)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_DIR}/conf ${ICUB_DIR}/conf)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/motorTools)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

#ADD_LIBRARY(som SOM.cpp)

ADD_EXECUTABLE(babbleFine babbleFine.cpp)
ADD_EXECUTABLE(handOptFlow handOptFlow.cpp)

TARGET_LINK_LIBRARIES(babbleFine ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
TARGET_LINK_LIBRARIES(handOptFlow ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
INSTALL(TARGETS babbleFine handOptFlow DESTINATION bin)
