SET(PROJECTNAME fineMotor)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_DIR}/conf ${ICUB_DIR}/conf)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/motorTools)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

#ADD_LIBRARY(som SOM.cpp)

ADD_EXECUTABLE(babbleFine babbleFine.cpp)
ADD_EXECUTABLE(handOptFlow handOptFlow.cpp)
ADD_EXECUTABLE(babbleFine2 babbleFine2.cpp)
ADD_EXECUTABLE(testMap testMap.cpp)
ADD_EXECUTABLE(babbleFineCart2 babbleFineCart2.cpp)
ADD_EXECUTABLE(handTracksFix handTracksFix.cpp)
ADD_EXECUTABLE(randFixReachable randFixReachable.cpp)

TARGET_LINK_LIBRARIES(babbleFine ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
TARGET_LINK_LIBRARIES(handOptFlow ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
TARGET_LINK_LIBRARIES(babbleFine2 ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
TARGET_LINK_LIBRARIES(testMap ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
TARGET_LINK_LIBRARIES(babbleFineCart2 ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
TARGET_LINK_LIBRARIES(handTracksFix ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
TARGET_LINK_LIBRARIES(randFixReachable ${YARP_LIBRARIES} ${ICUB_LIBRARIES} ${OpenCV_LIBRARIES} icubmod som)
INSTALL(TARGETS babbleFine handOptFlow babbleFine2 testMap babbleFineCart2 handTracksFix randFixReachable DESTINATION bin)
