SET(PROJECTNAME PIDBeam)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_DIR}/conf ${ICUB_DIR}/conf)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS})

# add required linker flags
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")              
SET(CMAKE_CXX_FLAGS_DEBUG "-g")

file(GLOB BALANCEFILES "*.cpp")

ADD_EXECUTABLE(balanceDemo ${BALANCEFILES})

TARGET_LINK_LIBRARIES(balanceDemo ${YARP_LIBRARIES} ${ICUB_LIBRARIES})

INSTALL(TARGETS balanceDemo DESTINATION bin)
